--- a/style.css
+++ b/style.css
@@ -2,9 +2,28 @@ body{
     font-family: 'Emblema One', cursive;
     color: rgb(16, 15, 83);
     text-align: justify;
+    margin: 0;
 }
 h1{
     font-size: 60px;
+    
+}
+.main-menu{
+    display: inline-block;
+    text-decoration: none;
+    text-align: left;
+    background-color: black;
+    width: 100%;
+    padding: 30px;
+    
+
+}
+.main-menu a{
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    margin: 10px;
+    
 }
 .my-story{
     display: flex;
